src/test/ui/rfc1598-generic-associated-types/iterable.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/iterable.rs:17:47
   |
17 |     type Iter<'a>: Iterator<Item = Self::Item<'a>>;
   |                                               ^^ undeclared lifetime

error: aborting due to previous error

